--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -7,18 +7,13 @@ on:
 
 jobs:
   build:
-
     runs-on: unbuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.9]
-    
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python 3.9
       uses: actions/setup-python@v2
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: 3.9
 
     - name: Install dependencies
       run: |
@@ -30,8 +25,9 @@ jobs:
         python -m pip install --upgrade build
         python -m build
 
-    - name: Upload distributions
-      uses: actions/upload-artifact@v4
+    - name: Release
+      uses: softprops/action-gh-release@v2
+      if: startsWith(github.ref, 'refs/tags/')
       with:
-        name: release-dists
-        path: dist/
+        files: |
+          /dist/*
