chore: Convert project to SOLID, 1.0 release

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ build-backend="hatchling.build"
 [tool.hatch.build.targets.sdist]
 include = [
   "XrayTestRunner/*.py",
+  "XrayTestRunner/utilities/*.py",
 ]
 
 [tool.hatch.build]
@@ -12,7 +13,7 @@ reproducible = true
 
 [project]
 name = "XrayTestRunner"
-version = "0.0.8"
+version = "1.0.0"
 authors = [
 	{ name = "JulianWolf", email="" }
 ]
